--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             <div class="container">
                 <h2 class="section-title">General Notes</h2>
                 <div class="notes-container">
-                    <iframe src="https://notes.com/general" class="notes-iframe" title="General Notes"></iframe>
+                    <iframe src="https://sindhiisrar.github.io/Eduverse-app-Notes/" class="notes-iframe" title="General Notes"></iframe>
                 </div>
                 <p class="text-center">Explore personal knowledge repository and general notes on various topics.</p>
             </div>
